# tipchain-aae-solana

./: .env.example  .gitignore  Anchor.toml  BUILD_TROUBLESHOOTING.md  CONTRACT_ADDRESSES.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile.build  LICENSE  README.md  docker-build.sh  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: deployment-info.md
agents/: discovery-agent.ts
app/: .env.example  package.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/agents/: page.tsx
app/src/app/creators/: page.tsx
app/src/app/deck/: page.tsx
app/src/app/pitch/: page.tsx
app/src/app/register/: page.tsx
app/src/components/: AgentDemo.tsx  CreatorCard.tsx  Header.tsx  StatsCard.tsx  TipModal.tsx
app/src/lib/: WalletProvider.tsx
docs/integrations/: SPONSOR_INTEGRATIONS.md
mcp-server/: README.md  package.json  tsconfig.json
mcp-server/src/: index.ts
programs/tipchain-agent/: Cargo.toml
programs/tipchain-agent/src/: lib.rs
scripts/: deploy-complete.sh  deploy-vercel.sh  deploy.sh  init-platform.ts  setup.sh  update-addresses.sh
sdk/: package.json
sdk/src/: index.ts  x402.ts
tests/: tipchain-agent.test.ts
